# drm-input-wayland

./: .gitignore  LICENSE  README.md
01/: Makefile  main.c
02/: Makefile  main.c
03/: compositor.c  compositor.h  main.c  output.c  output.h  region.c  region.h  surface.c  surface.h  xdg_shell.c  xdg_shell.h
99/: Makefile  compositor.c  main.c  surface.c  xdg_shell.h
atomic/: Makefile  a.out  issue  main.c
compositor/: Makefile  algebra.c  algebra.h  compositor.c  compositor.h  egl.c  keyboard.c  keyboard.h  log  main.c  meson.build  output.c  renderer.c  renderer.h  seat.c  seat.h  surface.c  surface.h  xdg_shell.c  xdg_shell.h
compositor/backend/: algebra.c  egl.c  input.c  renderer.c  screen.c
compositor/include/: renderer.h
compositor/include/backend/: egl.h  input.h  renderer.h  screen.h
compositor/include/util/: box.h
compositor/include/wl/: compositor.h  keyboard.h  surface.h
compositor/include/xdg/: xdg_shell.h
compositor/shaders/: basic.frag  basic.vert  texture.frag  texture.vert
compositor/wl/: compositor.c  keyboard.c  output.c  region.c  seat.c  surface.c
compositor/xdg/: xdg_shell.c
drm-info/: main.c  meson.build
